RESOLVED FIXED308293
Popover light dismiss doesn't account for input buttons
https://bugs.webkit.org/show_bug.cgi?id=308293
Summary Popover light dismiss doesn't account for input buttons
Luke Warlow
Reported 2026-02-20 05:37:24 PST
The popover light dismiss algorithm correctly accounts for `<button commandfor="popover"...>` and `<button popovertarget="popover"...>` but *not* `<input type="button" popovertarget="popover"...<`. https://jsfiddle.net/fkctxL8h/ - Click one of the buttons to open the popover, then click on the first button. You'll see the popover correctly closes. Repeat but click the second button (which is an input button), you'll see the popover remains open. In firefox and chromium both buttons behave the same.
Attachments
Luke Warlow
Comment 1 2026-02-20 06:21:43 PST
Radar WebKit Bug Importer
Comment 2 2026-02-27 05:38:10 PST
EWS
Comment 3 2026-05-25 06:27:00 PDT
Committed 313840@main (8f3795d82a4d): <https://commits.webkit.org/313840@main> Reviewed commits have been landed. Closing PR #59086 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.