Popover light dimiss doesn't account for input buttons https://bugs.webkit.org/show_bug.cgi?id=308293

Reviewed by Tim Nguyen.

Inside of document::handlePopoverLightDismiss() we now check for input buttons alongside buttons and selects.

Tests: imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-button.html
       imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-text.html

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-button-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-button.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-text-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-text.html: Added.
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-input-button-expected.txt: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::handlePopoverLightDismiss):

Canonical link: https://commits.webkit.org/313840@main